--- a/views/donhang/chitiet_donhang.ejs
+++ b/views/donhang/chitiet_donhang.ejs
@@ -16,7 +16,7 @@
   <%- include('../inc/header') %>
     <div class="d-flex flex-row">
       <%- include('../inc/sidebar') %>
-        <div class="content col-md-10 sm-10">
+        <div class="content col-md-10 sm-10"style="overflow: auto; height: 80vh">
           <div class="container">
             <h1 class="text-center mb-4">Chi tiết đơn hàng</h1>
             <div class="card mb-3">
