--- a/views/donhang/home_donhang.ejs
+++ b/views/donhang/home_donhang.ejs
@@ -15,7 +15,7 @@
   <%- include('../inc/header') %>
     <div class="d-flex flex-row">
       <%- include('../inc/sidebar') %>
-        <div class="content col-md-10 sm-10">
+        <div class="content col-md-10 sm-10"style="overflow: auto; height: 80vh">
           <form id="myForm">
             <div class="row g-3">
               <div class="btn-group col col-xl-2 col-lg-2 col-md-2 col-sm-12">
