--- a/views/hang/home_hang.ejs
+++ b/views/hang/home_hang.ejs
@@ -75,7 +75,6 @@
             max-height: 50px;
            padding: 2%;
         }
-        
         tr {
             margin-top: 10px;
         }
@@ -127,8 +126,7 @@
 <%- include('../inc/header') %>
 <div class="d-flex flex-row">
     <%- include('../inc/sidebar') %>
-    <div class="content col-md-10 sm-10">
-        <h2><%= title %></h2>
+    <div class="content col-md-10 sm-10" style="overflow: auto; height: 80vh">
         <div class="top">
         <form id="searchForm" action="/hang/search" method="GET">
             <div class="row g-3">
@@ -139,7 +137,7 @@
                     <button type="submit" class="btn btn-primary">Tìm</button>
                 </div>
                 <div class="col-auto">
-                    <a href="/hang" id="clear" class="btn btn-secondary">Clear</a>
+                    <button id="clear" class="btn btn-secondary">Clear</button>
                 </div>
                 <div class="col-auto">
                     <a href="/hang" id="clear" class="btn btn-secondary">All</a>
@@ -151,7 +149,7 @@
                 Thêm
             </button>
             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
+                <div class="modal-dialog modal-dialog-centered modal-xl">
                 <div class="form2 modal-content">
                     <form id="form2" method="post" action="hang/addHangSX" enctype="multipart/form-data">
                         <div class="modal-header">
