--- a/views/tinnhan/home_tinnhan.ejs
+++ b/views/tinnhan/home_tinnhan.ejs
@@ -21,14 +21,15 @@
 
     /* phần csss tìm kiếm và check  */
     .search_and_check {
-      width: 20%;
+      width: 24%;
       height: 100%;
-
+      margin-right: 10px;
 
     }
 
     .search_mess {
       width: 100%;
+      height: 50px;
       margin-top: 10px;
       border-radius: 10px;
       border: 1px solid black;
@@ -75,17 +76,38 @@
 
     }
 
+
     .item_chat {
-      width: 100%;
+      width: 95%;
       margin-top: 10px;
-      flex-direction: row;
+      align-self: center;
+      margin-left: 1%;
+      display: flex;
+      align-items: center;
+      border-radius: 10px;
+      border: 1px solid #ddd;
+      /* Thêm đường viền để tạo độ sâu */
+      padding: 10px;
+      margin-bottom: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      /* Shadow mềm mại */
+      transition: box-shadow 0.3s ease;
+    }
+
+    .item_chat:hover {
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    }
+
+    .item_chat_contentMess {
+      font-size: 12px;
+      margin-left: 5px;
     }
 
     /* ////////// ////// */
 
 
     .message_index {
-      width: 79%;
+      width: 74%;
       border-radius: 10px;
       height: 1000px;
     }
@@ -105,54 +127,12 @@
 
     .highlighted {
       border: 1px solid black;
-
       box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+      transition: box-shadow 0.3s ease;
       /* Thiết lập viền cho các nút được chọn */
     }
   </style>
 </head>
-<script type="module" src="/middlewares/firebase.config.js"></script>
-<script>
-  console.log('2')
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.10.0/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.10.0/firebase-analytics.js";
-  import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/10.10.0/firebase-database.js"
-
-
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
-
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-    apiKey: "AIzaSyAQTaVbsAvnb1KWVl1HlhoOum8YwcbEbZE",
-    authDomain: "skylap-md03.firebaseapp.com",
-    databaseURL: "https://skylap-md03-default-rtdb.asia-southeast1.firebasedatabase.app",
-    projectId: "skylap-md03",
-    storageBucket: "skylap-md03.appspot.com",
-    messagingSenderId: "206926809191",
-    appId: "1:206926809191:web:e8dc6a3da11ea129b4ecc2",
-    measurementId: "G-TSY3SXB2F5"
-  };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
-  const database = getDatabase(app);
-
-  // Reference to your database node
-  const dbRef = ref(database, 'Chat').on();
-
-  // Listen for changes in the database
-  onValue(dbRef, (snapshot) => {
-    const data = snapshot.val();
-    console.log(data)
-
-
-
-  });
-</script>
 
 <body>
   <%- include('../inc/header') %>
@@ -183,27 +163,43 @@
             <!-- /////////////////////// -->
 
 
-            <div class="list_chat" style="max-height: max-content; overflow-y: auto;">
-             
-                      <div class="item_chat" style="display: flex; align-items: center; border-bottom: 1px solid black;"
-                        onclick="">
-                       
-                         
-                          
-                            <img style="border-radius: 30px;  margin-left: 10px;" width="50" height="50"
-                              src="https://cdn-icons-png.flaticon.com/128/3135/3135715.png">
-                           
-                              <div style="margin-left: 10px; margin-top: 10px;">
-                                <p>
-                                  
-                                </p>
-                                
-                                   
-                              </div>
+            <div class="list_chat" style="max-height: max-content; width: 100%; overflow-x: auto;">
+              <% if (listAccounts==null) { %>
+                <% return; %>
+                  <% } else { %>
+                    <% listAccounts.forEach(account=> { %>
+                      <% if (account) { %>
+                        <% if (listMess.some(message=> message.idAccount == account._id)) { %>
+                          <div class="item_chat" onclick="">
+                            <% if (account.avatar) { %>
+                              <img style="border-radius: 30px; margin-left: 10px;" width="50" height="50"
+                                src="<%= account.avatar %>">
+                              <% } else { %>
+                                <img style="border-radius: 30px; margin-left: 10px;" width="50" height="50"
+                                  src="https://cdn-icons-png.flaticon.com/128/3135/3135715.png">
+                                <% } %>
+                                  <div style="margin-left: 10px; margin-top: 5px;">
+                                    <% if (account.taiKhoan) { %>
+                                      <p>
+                                        <%= account.taiKhoan %>
+                                      </p>
+                                      <% } %>
+                                        <% listMess.forEach(message=> { %>
+                                          <% if (message.idAccount==account._id) { %>
+                                            <strong class="item_chat_contentMess">
+                                              <%= message.content %>
+                                            </strong>
+                                            <% } %>
+                                              <% }); %>
+                                  </div>
+                          </div>
+                          <% } %>
+                            <% } %>
+                              <% }); %>
+                                <% } %>
 
-                      </div>
 
-                    
+
 
 
 
