--- a/views/hang/home_hang.ejs
+++ b/views/hang/home_hang.ejs
@@ -68,12 +68,12 @@
         }
         
         .img1 {
-            width: 100%;
-            height: 20%;
+            width: auto;
+            height: auto;
             margin: auto;
             max-width: 100%;
             max-height: 50px;
-           padding: 2%;
+            padding: 1%;
         }
         tr {
             margin-top: 10px;
@@ -160,6 +160,10 @@
                             <input required="true" type="text" class="form-control" placeholder="Tên" name="tenHangSx">
                             <input required="true" type="file" name="file" id="logoInput" accept="image/*">
                         </div>
+                        <div class="form-check form-switch ms-3">
+                            <label class="form-check-label" for="flexSwitchCheckChecked">Trạng Thái</label>
+                            <input name="trangThai" class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
+                          </div>
                         <div class="modal-footer">
                             <a type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</a>
                             <button type="submit" class="btn btn-primary">Lưu</button>
@@ -193,10 +197,54 @@
                 <td>
                     <table class="tb2">
                         <th class="th2">
-                            <a href="/adu">
-                                <img src="https://cdn2.iconfinder.com/data/icons/lucid-generic/24/edit_update_pencil_post_write-512.png"
-                                     alt="">
-                            </a>
+                                <!-- Button trigger modal -->
+                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal<%= index %>">
+                                    update
+                                </button>
+                                <!-- Modal -->
+                                <form action="/hang/update/<%= Hangsx._id %>" method="post" enctype="multipart/form-data">
+                                    <div class="modal fade" id="exampleModal<%= index %>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog modal-dialog-centered modal-xl ">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h1 class="modal-title fs-5" id="exampleModalLabel"><%= Hangsx.tenHangSx %></h1>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <div class="row">
+                                                        <div class="col">
+                                                            <input required="true" value="<%= Hangsx.tenHangSx %>" type="text" class="form-control" placeholder="Tên" name="tenHangSx">
+                                                        </div>
+                                                        <div class="col">
+                                                            <label for="trangThai">Chọn trạng thái:</label>
+                                                            <select id="trangThai" name="trangThai" class="form-select">
+                                                                <% if (Hangsx.trangThai) { %>
+                                                                    <option value="True">True</option>
+                                                                    <option value="False">False</option>
+                                                                <% } else { %>
+                                                                    <option value="False">False</option>
+                                                                    <option value="True">True</option>
+                                                                <% } %>
+                                                            </select>
+                                                        </div>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="col">
+                                                            <input type="file" name="logoFile" id="s" accept="image/*" onchange="previewImage(this)">
+                                                        </div>
+                                                        <div class="col">
+                                                            <img id="previewImg2" src="<%= Hangsx.imageLogo %>" alt="" style="width: auto; height: auto; max-width: 100%; max-height: 200px; margin: auto;">
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                                    <button type="submit" class="btn btn-primary">Save changes</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
                         </th>
                     </table>
                 </td>
@@ -241,6 +289,26 @@
                 reader.readAsDataURL(file);
             }
         });
+        //
+    document.getElementById('s').addEventListener('change', function () {
+        previewImage(this);
+    });
+
+    function previewImage(input) {
+        var preview = document.getElementById('previewImg2');
+        var file = input.files[0];
+        var reader = new FileReader();
+
+        reader.onloadend = function () {
+            preview.src = reader.result;
+        }
+
+        if (file) {
+            reader.readAsDataURL(file);
+        } else {
+            preview.src = "";
+        }
+    }
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
