--- a/views/user/home_user.ejs
+++ b/views/user/home_user.ejs
@@ -128,11 +128,7 @@
                 <th >STT</th>
                 <th >ID</th>
                 <th >Tài Khoản</th>
-                <th >Mật Khẩu</th>
-                <th>Họ Tên</th>
                 <th >Số Điện Thoại</th>
-                <th >Email</th>
-                <th >Địa Chỉ</th>
                 <th >Trạng Thái</th>
                 <th>Khác</th>
             </tr>
@@ -141,24 +137,63 @@
               <td><%= index + 1 %></td>
               <td><%= user._id %></td>
               <td><%= user.taiKhoan %></td>
-              <td><input class="password" style="border: none; outline: none; text-align: center;" readonly="true" type="password" value="<%= user.matKhau %>" ></td>
-              <td><%= user.hoTen %></td>
               <td><%= user.sdt %></td>
-              <td><%= user.email %></td>
-              <% if(user.diaChi) { %>
-               <td><%= user.diaChi.diaChi %></td>
-               <% } else { %>
-                <td></td> 
-                <% }%> 
               <td><%= user.trangThai %></td>
               <td>
-                  <table class="tb2">
-                      <th class="th2">                           <!-- Button trigger modal -->
-                                <button id="ShowPassword" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                                    <img src="https://png.pngtree.com/png-vector/20190118/ourmid/pngtree-vector-view-icon-png-image_323837.jpg" />
-                                </button>  
-                      </th>
-                  </table>
+                   <!-- Button trigger modal -->
+                        <p data-bs-toggle="modal" data-bs-target="#exampleModal<%= index %>"><a href="#" class="underline"><i>Chi tiết</i></a></p>
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal<%= index %>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered modal-xl">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="exampleModalLabel"><%= user.hoTen %></h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <div class="mb-3">
+                                    <span class="input-group-text" id="inputGroup-sizing-default">Tài khoản:    <%= user.taiKhoan%> </span>
+                                  </div>
+                                  <div class="mb-3">
+                                    <span class="input-group-text" id="inputGroup-sizing-default">Mật khẩu:    <%= user.matKhau%> </span>
+                                  </div>
+                                  <div class="mb-3">
+                                    <span class="input-group-text" id="inputGroup-sizing-default">Họ tên:    <%= user.hoTen%> </span>
+                                  </div>
+                                  <div class="mb-3">
+                                    <span class="input-group-text text-wrap text-start" id="inputGroup-sizing-default">Địa chỉ:
+                                        <% if(user.diaChi) { %>
+                                        <%= user.diaChi.diaChi %> 
+                                        <% } else { %>
+                                        <% } %>
+                                    </span>
+                                  </div>
+                                  <div class="mb-3">
+                                    <span class="input-group-text" id="inputGroup-sizing-default">Số điện thoại:    <%= user.sdt %> </span>
+                                  </div>
+                                  <div class="mb-3">
+                                    <span class="input-group-text" id="inputGroup-sizing-default">Email:    <%= user.email %> </span>
+                                  </div>
+                                  <div class="col">
+                                    <select id="trangThai" name="trangThai" class="form-select">
+                                        <% if (user.trangThai) { %>
+                                            <option value="True">True</option>
+                                            <option value="False">False</option>
+                                        <% } else { %>
+                                            <option value="False">False</option>
+                                            <option value="True">True</option>
+                                        <% } %>
+                                    </select>
+                                </div>
+                                 
+                            </div>
+                            <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Save changes</button>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
               </td>
               <% }) %>
           </tr>
