fixx ui , sendmess

--- a/views/inc/sidebar.ejs
+++ b/views/inc/sidebar.ejs
@@ -2,7 +2,7 @@
     <!-- Content For Sidebar -->
     <div class="h-500">
         <div class="sidebar-logo" style="justify-content: space-around;">
-            <img width="50" height="40" src="images/Logo.png" alt="" srcset="">
+            <img width="50" height="40" src="/images/Logo.png" alt="" srcset="">
             <a href="#">Skylap Admin </a>
         </div>
         <ul class="sidebar-nav">
@@ -84,3 +84,5 @@
         </ul>
     </div>
 </aside>
+
+
