--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -9,23 +9,27 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+  <!-- ////// css sidebar ////////// -->
   <script src="https://kit.fontawesome.com/ae360af17e.js" crossorigin="anonymous"></script>
-<!-- ////// css sidebar ////////// -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="../stylesheets/sidebar.css">
+
 </head>
 
 <body>
-  <%- include('../inc/sidebar') %>
-    <div class="main">
-      <%- include('../inc/header') %>
-        <h1>Chưa biết hiển thị gì ở HOME</h1>
-    </div>
+  <div class="wrapper">
+    <%- include('../inc/sidebar') %>
+      <div class="main">
+        <%- include('../inc/header') %>
+          <h1>Chưa biết hiển thị gì ở HOME</h1>
+          <%- include('../inc/footer') %>
+      </div>
 
-    <%- include('../inc/footer') %>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+  </div>
+
+
+
 </body>
 
 </html>
