--- a/views/khuyenmai/home_khuyenmai.ejs
+++ b/views/khuyenmai/home_khuyenmai.ejs
@@ -7,8 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- ////// css sidebar ////////// -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="../stylesheets/sidebar.css">
+    <script src="https://kit.fontawesome.com/ae360af17e.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="../stylesheets/sidebar.css">
     <style>
         .tb1 {
             width: 100%;
@@ -130,141 +131,146 @@
     </style>
 </head>
 <body>
-<%- include('../inc/header') %>
-<div class="d-flex flex-row">
-    <%- include('../inc/sidebar') %>
-    <div class="content col-md-10 sm-10" style="overflow: auto; height: 80vh;">
-        <div class="top">
-        <form id="searchForm" action="/khuyen-mai/search" method="GET">
-            <div class="row g-3">
-                <div class="col">
-                    <input required="true" type="text" id="textQuery" name="query" class="form-control" placeholder="Id Khuyen mai">
-                </div>
-                <div class="col-auto">
-                    <button type="submit" class="btn btn-primary">Tìm</button>
-                </div>
-                <div class="col-auto">
-                    <button type="button" id="clear" class="btn btn-secondary">Clear</button>
-                </div>
-                <div class="col-auto">
-                    <a href="/khuyen-mai" id="clear" class="btn btn-secondary">All</a>
+    <div class="wrapper">
+        <%- include('../inc/sidebar') %>
+        <div class="main">
+            <%- include('../inc/header') %>
+            <div class="content col-md-10 sm-10" style="overflow: auto; height: 80vh;">
+                <div class="top">
+                <form id="searchForm" action="/khuyen-mai/search" method="GET">
+                    <div class="row g-3">
+                        <div class="col">
+                            <input required="true" type="text" id="textQuery" name="query" class="form-control" placeholder="Id Khuyen mai">
+                        </div>
+                        <div class="col-auto">
+                            <button type="submit" class="btn btn-primary">Tìm</button>
+                        </div>
+                        <div class="col-auto">
+                            <button type="button" id="clear" class="btn btn-secondary">Clear</button>
+                        </div>
+                        <div class="col-auto">
+                            <a href="/khuyen-mai" id="clear" class="btn btn-secondary">All</a>
+                        </div>
+                    </div>
+                </form>
+                <div>
+                    <button  type="button" class="add btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        Thêm
+                    </button>
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered modal-xl">
+                        <div class="form2 modal-content">
+                            <form id="form2" method="post" action="/khuyen-mai/addKhuyenMai" enctype="multipart/form-data">
+                                <div class="modal-header">
+                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Thêm Khuyến Mại</h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="input-group ">
+                                        <span class="input-group-text" id="inputGroup-sizing-lg">Thời gian bắt đầu</span>
+                                        <input required="true" name="thoiGianBatDau" type="datetime-local" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+                                      </div>
+                                      <div class="input-group ">
+                                        <span class="input-group-text" id="inputGroup-sizing-lg">Thời gian kết thúc</span>
+                                        <input required="true" name="thoiGianKetThuc" type="datetime-local" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+                                      </div>
+                                      <div class="input-group ">
+                                        <span class="input-group-text" id="inputGroup-sizing-lg">Code</span>
+                                        <input required="true" name="code" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+                                      </div>
+                                      <div class="input-group ">
+                                        <span class="input-group-text" id="inputGroup-sizing-lg">Số tiền</span>
+                                        <input required="true" name="soTienGiam" type="number" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+                                      </div>
+                                      <div class="input-group ">
+                                        <span class="input-group-text" id="inputGroup-sizing-lg">Mô Tả</span>
+                                        <input required="true" name="moTa" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+                                      </div>
+                                      <div class="input-group ">
+                                        <span class="input-group-text" id="inputGroup-sizing-lg">Số Lượng</span>
+                                        <input required="true" name="soLuong" type="number" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+                                      </div>
+                                      <div class="form-check form-switch">
+                                        <label class="form-check-label" for="flexSwitchCheckChecked">Trạng Thái</label>
+                                        <input name="trangThai" class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
+                                      </div>
+                                      <div class="input-group ">
+                                        <input type="file" name="file" id="logoInput" accept="image/*" required="true">
+                                      </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <a type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</a>
+                                    <button type="submit" class="btn btn-primary">Lưu</button>
+                                </div>
+                            </form>
+                            <div class="preview">
+                                <h5>Ảnh xem trước</h5>
+                                <img id="logoPreview" src="#" style="max-width: 100%; max-height: 200px;">
+                            </div>
+                        </div>
+                        </div>
+                    </div>    
                 </div>
             </div>
-        </form>
-        <div>
-            <button  type="button" class="add btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                Thêm
-            </button>
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered modal-xl">
-                <div class="form2 modal-content">
-                    <form id="form2" method="post" action="/khuyen-mai/addKhuyenMai" enctype="multipart/form-data">
-                        <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="exampleModalLabel">Thêm Khuyến Mại</h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <div class="input-group ">
-                                <span class="input-group-text" id="inputGroup-sizing-lg">Thời gian bắt đầu</span>
-                                <input required="true" name="thoiGianBatDau" type="datetime-local" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-                              </div>
-                              <div class="input-group ">
-                                <span class="input-group-text" id="inputGroup-sizing-lg">Thời gian kết thúc</span>
-                                <input required="true" name="thoiGianKetThuc" type="datetime-local" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-                              </div>
-                              <div class="input-group ">
-                                <span class="input-group-text" id="inputGroup-sizing-lg">Code</span>
-                                <input required="true" name="code" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-                              </div>
-                              <div class="input-group ">
-                                <span class="input-group-text" id="inputGroup-sizing-lg">Số tiền</span>
-                                <input required="true" name="soTienGiam" type="number" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-                              </div>
-                              <div class="input-group ">
-                                <span class="input-group-text" id="inputGroup-sizing-lg">Mô Tả</span>
-                                <input required="true" name="moTa" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-                              </div>
-                              <div class="input-group ">
-                                <span class="input-group-text" id="inputGroup-sizing-lg">Số Lượng</span>
-                                <input required="true" name="soLuong" type="number" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-                              </div>
-                              <div class="form-check form-switch">
-                                <label class="form-check-label" for="flexSwitchCheckChecked">Trạng Thái</label>
-                                <input name="trangThai" class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
-                              </div>
-                              <div class="input-group ">
-                                <input type="file" name="file" id="logoInput" accept="image/*" required="true">
-                              </div>
-                        </div>
-                        <div class="modal-footer">
-                            <a type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</a>
-                            <button type="submit" class="btn btn-primary">Lưu</button>
-                        </div>
-                    </form>
-                    <div class="preview">
-                        <h5>Ảnh xem trước</h5>
-                        <img id="logoPreview" src="#" style="max-width: 100%; max-height: 200px;">
-                    </div>
-                </div>
-                </div>
-            </div>    
-        </div>
+                <table class="tb1 table table-bordered table-hover mt-3">
+                    <tr>
+                        <th class="stt">STT</th>
+                        <th class="id">ID</th>
+                        <th class="anh">Ảnh</th>
+                        <th class="sotien">Số tiền Giảm</th>
+                        <th class="hanhDong">Ngày Băt Đầu</th>
+                        <th class="hanhDong">Ngày Kết Thúc</th>
+                        <th class="hanhDong">Code</th>
+                        <th class="trangThai">Trạng Thái</th>
+                        <th class="hanhDong">Hành Động</th>
+                    </tr>
+                    <% listKhuyenMai.forEach((khuyenMai, index) => { %>
+                    <tr class="hang">
+                        <td><%= index + 1 %></td>
+                        <td><%= khuyenMai._id %></td>
+                        <td><img class="img1" src="<%= khuyenMai.anh %>" alt=""></td>
+                        <td style="color: red; font-size: 80%; font-weight: bold;"><%= khuyenMai.soTienGiam.toLocaleString() %>₫</td>
+                        <td style="width: 10%;"><%= khuyenMai.thoiGianBatDau.toLocaleString() %></td>
+                        <td><%= khuyenMai.thoiGianKetThuc.toLocaleString() %></td>
+                        <td><%= khuyenMai.code %></td>
+                        <td <% if (khuyenMai.trangThai === true) { %> style="color: black;" <% } else { %> style="color: red;" <% } %>><%= khuyenMai.trangThai %></td>
+                        <td>
+                            <table class="tb2">
+                                <th class="th2">
+                                    <a href="/adu">
+                                        <img src="https://cdn2.iconfinder.com/data/icons/lucid-generic/24/edit_update_pencil_post_write-512.png"
+                                             alt="">
+                                    </a>
+                                </th>
+                            </table>
+                        </td>
+                    </tr>
+                    <% }) %>
+                </table>
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination justify-content-end">
+                      <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Previous">
+                          <span aria-hidden="true">&laquo;</span>
+                        </a>
+                      </li>
+                      <li class="page-item"><a class="page-link" href="/khuyen-mai">1</a></li>
+                      <li class="page-item"><a class="page-link" href="/khuyen-mai">2</a></li>
+                      <li class="page-item"><a class="page-link" href="/khuyen-mai">3</a></li>
+                      <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Next">
+                          <span aria-hidden="true">&raquo;</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </nav>
+            </div>
+            <%- include('../inc/footer') %>
+          </div>
     </div>
-        <table class="tb1">
-            <tr>
-                <th class="stt">STT</th>
-                <th class="id">ID</th>
-                <th class="anh">Ảnh</th>
-                <th class="sotien">Số tiền Giảm</th>
-                <th class="hanhDong">Ngày Băt Đầu</th>
-                <th class="hanhDong">Ngày Kết Thúc</th>
-                <th class="hanhDong">Code</th>
-                <th class="trangThai">Trạng Thái</th>
-                <th class="hanhDong">Hành Động</th>
-            </tr>
-            <% listKhuyenMai.forEach((khuyenMai, index) => { %>
-            <tr class="hang">
-                <td><%= index + 1 %></td>
-                <td><%= khuyenMai._id %></td>
-                <td><img class="img1" src="<%= khuyenMai.anh %>" alt=""></td>
-                <td style="color: red; font-size: 80%; font-weight: bold;"><%= khuyenMai.soTienGiam.toLocaleString() %>₫</td>
-                <td style="width: 10%;"><%= khuyenMai.thoiGianBatDau.toLocaleString() %></td>
-                <td><%= khuyenMai.thoiGianKetThuc.toLocaleString() %></td>
-                <td><%= khuyenMai.code %></td>
-                <td <% if (khuyenMai.trangThai === true) { %> style="color: black;" <% } else { %> style="color: red;" <% } %>><%= khuyenMai.trangThai %></td>
-                <td>
-                    <table class="tb2">
-                        <th class="th2">
-                            <a href="/adu">
-                                <img src="https://cdn2.iconfinder.com/data/icons/lucid-generic/24/edit_update_pencil_post_write-512.png"
-                                     alt="">
-                            </a>
-                        </th>
-                    </table>
-                </td>
-            </tr>
-            <% }) %>
-        </table>
-        <nav aria-label="Page navigation example">
-            <ul class="pagination justify-content-end">
-              <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
-                  <span aria-hidden="true">&laquo;</span>
-                </a>
-              </li>
-              <li class="page-item"><a class="page-link" href="/khuyen-mai">1</a></li>
-              <li class="page-item"><a class="page-link" href="/khuyen-mai">2</a></li>
-              <li class="page-item"><a class="page-link" href="/khuyen-mai">3</a></li>
-              <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
-                  <span aria-hidden="true">&raquo;</span>
-                </a>
-              </li>
-            </ul>
-          </nav>
-    </div>
-  </div>
-<%- include('../inc/footer') %>
+
+
+
 
 <script>
    document.getElementById("clear").addEventListener("click", function(){
