--- a/views/user/home_user.ejs
+++ b/views/user/home_user.ejs
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
-          <link rel="stylesheet" href="../stylesheets/sidebar.css">
+          <script src="https://kit.fontawesome.com/ae360af17e.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="../stylesheets/sidebar.css">
     <style>
         .tb1 {
             width: 100%;
@@ -94,131 +95,136 @@
     </style>
 </head>
 <body>
-<%- include('../inc/header') %>
-<div class="d-flex flex-row">
-    <%- include('../inc/sidebar') %>
-    <div class="content col-md-10 sm-10" style="height: 80vh; overflow-y: auto;">
-        <div class="top">
-        <form id="searchForm" action="/user/queryUser" method="GET">
-            <div class="row g-3">
-                <div class="btn-group col col-xl-2 col-lg-2 col-md-2 col-sm-12">
-                    <button id="dropdownMenuButton" class="btn btn-secondary btn-sm dropdown-toggle" type="button"
-                      data-bs-toggle="dropdown" aria-expanded="false">
-                      Tất cả
-                    </button>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="/user">Tất cả</a></li>
-                      <li><a class="dropdown-item" href="/user/userActiveTrue">Đang hoạt động</a></li>
-                      <li><a class="dropdown-item" href="/user/userActiveFalse">Không còn hoạt động</a></li>
-                    </ul>
-                  </div>
-                <div class="col">
-                    <input required="true" type="text" id="textQuery" name="query" class="form-control" placeholder="Tên">
-                </div>
-                <div class="col-auto">
-                    <button type="submit" class="btn btn-primary">Tìm</button>
-                </div>
-                <div class="col-auto">
-                    <a id="clear" class="btn btn-secondary">Clear</a>
-                </div>
-            </div>
-        </form>
-    </div>
-        <table class="tb1">
-            <tr>
-                <th >STT</th>
-                <th >ID</th>
-                <th >Tài Khoản</th>
-                <th >Số Điện Thoại</th>
-                <th >Trạng Thái</th>
-                <th>Khác</th>
-            </tr>
-            <% listUser.forEach((user, index) => { %>
-            <tr class="hang">
-              <td><%= index + 1 %></td>
-              <td><%= user._id %></td>
-              <td><%= user.taiKhoan %></td>
-              <td><%= user.sdt %></td>
-              <td><%= user.trangThai %></td>
-              <td>
-                   <!-- Button trigger modal -->
-                        <p data-bs-toggle="modal" data-bs-target="#exampleModal<%= index %>"><a href="#" class="underline"><i>Chi tiết</i></a></p>
-                    <!-- Modal -->
-                    <div class="modal fade" id="exampleModal<%= index %>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered modal-xl">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="exampleModalLabel"><%= user.hoTen %></h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                <div class="mb-3">
-                                    <span class="input-group-text" id="inputGroup-sizing-default">Tài khoản:    <%= user.taiKhoan%> </span>
-                                  </div>
-                                  <div class="mb-3">
-                                    <span class="input-group-text" id="inputGroup-sizing-default">Mật khẩu:    <%= user.matKhau%> </span>
-                                  </div>
-                                  <div class="mb-3">
-                                    <span class="input-group-text" id="inputGroup-sizing-default">Họ tên:    <%= user.hoTen%> </span>
-                                  </div>
-                                  <div class="mb-3">
-                                    <span class="input-group-text text-wrap text-start" id="inputGroup-sizing-default">Địa chỉ:
-                                        <% if(user.diaChi) { %>
-                                        <%= user.diaChi.diaChi %> 
-                                        <% } else { %>
-                                        <% } %>
-                                    </span>
-                                  </div>
-                                  <div class="mb-3">
-                                    <span class="input-group-text" id="inputGroup-sizing-default">Số điện thoại:    <%= user.sdt %> </span>
-                                  </div>
-                                  <div class="mb-3">
-                                    <span class="input-group-text" id="inputGroup-sizing-default">Email:    <%= user.email %> </span>
-                                  </div>
-                                  <div class="col">
-                                    <select id="trangThai" name="trangThai" class="form-select">
-                                        <% if (user.trangThai) { %>
-                                            <option value="True">True</option>
-                                            <option value="False">False</option>
-                                        <% } else { %>
-                                            <option value="False">False</option>
-                                            <option value="True">True</option>
-                                        <% } %>
-                                    </select>
-                                </div>
-                                 
-                            </div>
-                            <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Save changes</button>
-                            </div>
+    <div class="wrapper">
+        <%- include('../inc/sidebar') %>
+        <div class="main">
+            <%- include('../inc/header') %>
+            <div class="content col-md-10 sm-10" style="height: 80vh; overflow-y: auto;">
+                <div class="top">
+                <form id="searchForm" action="/user/queryUser" method="GET">
+                    <div class="row g-3">
+                        <div class="btn-group col col-xl-2 col-lg-2 col-md-2 col-sm-12">
+                            <button id="dropdownMenuButton" class="btn btn-secondary btn-sm dropdown-toggle" type="button"
+                              data-bs-toggle="dropdown" aria-expanded="false">
+                              Tất cả
+                            </button>
+                            <ul class="dropdown-menu">
+                              <li><a class="dropdown-item" href="/user">Tất cả</a></li>
+                              <li><a class="dropdown-item" href="/user/userActiveTrue">Đang hoạt động</a></li>
+                              <li><a class="dropdown-item" href="/user/userActiveFalse">Không còn hoạt động</a></li>
+                            </ul>
+                          </div>
+                        <div class="col">
+                            <input required="true" type="text" id="textQuery" name="query" class="form-control" placeholder="Tên">
                         </div>
+                        <div class="col-auto">
+                            <button type="submit" class="btn btn-primary">Tìm</button>
+                        </div>
+                        <div class="col-auto">
+                            <a id="clear" class="btn btn-secondary">Clear</a>
                         </div>
                     </div>
-              </td>
-              <% }) %>
-          </tr>
-        </table>
-        <nav aria-label="Page navigation example">
-            <ul class="pagination justify-content-end">
-              <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
-                  <span aria-hidden="true">&laquo;</span>
-                </a>
-              </li>
-              <li class="page-item"><a class="page-link" href="/">1</a></li>
-              <li class="page-item"><a class="page-link" href="/">2</a></li>
-              <li class="page-item"><a class="page-link" href="/">3</a></li>
-              <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
-                  <span aria-hidden="true">&raquo;</span>
-                </a>
-              </li>
-            </ul>
-          </nav>
+                </form>
+            </div>
+                <table class="tb1 table table-bordered table-hover mt-3">
+                    <tr>
+                        <th >STT</th>
+                        <th >ID</th>
+                        <th >Tài Khoản</th>
+                        <th >Số Điện Thoại</th>
+                        <th >Trạng Thái</th>
+                        <th>Khác</th>
+                    </tr>
+                    <% listUser.forEach((user, index) => { %>
+                    <tr class="hang">
+                      <td><%= index + 1 %></td>
+                      <td><%= user._id %></td>
+                      <td><%= user.taiKhoan %></td>
+                      <td><%= user.sdt %></td>
+                      <td><%= user.trangThai %></td>
+                      <td>
+                           <!-- Button trigger modal -->
+                                <p data-bs-toggle="modal" data-bs-target="#exampleModal<%= index %>"><a href="#" class="underline"><i>Chi tiết</i></a></p>
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModal<%= index %>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered modal-xl">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                    <h1 class="modal-title fs-5" id="exampleModalLabel"><%= user.hoTen %></h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="mb-3">
+                                            <span class="input-group-text" id="inputGroup-sizing-default">Tài khoản:    <%= user.taiKhoan%> </span>
+                                          </div>
+                                          <div class="mb-3">
+                                            <span class="input-group-text" id="inputGroup-sizing-default">Mật khẩu:    <%= user.matKhau%> </span>
+                                          </div>
+                                          <div class="mb-3">
+                                            <span class="input-group-text" id="inputGroup-sizing-default">Họ tên:    <%= user.hoTen%> </span>
+                                          </div>
+                                          <div class="mb-3">
+                                            <span class="input-group-text text-wrap text-start" id="inputGroup-sizing-default">Địa chỉ:
+                                                <% if(user.diaChi) { %>
+                                                <%= user.diaChi.diaChi %> 
+                                                <% } else { %>
+                                                <% } %>
+                                            </span>
+                                          </div>
+                                          <div class="mb-3">
+                                            <span class="input-group-text" id="inputGroup-sizing-default">Số điện thoại:    <%= user.sdt %> </span>
+                                          </div>
+                                          <div class="mb-3">
+                                            <span class="input-group-text" id="inputGroup-sizing-default">Email:    <%= user.email %> </span>
+                                          </div>
+                                          <div class="col">
+                                            <select id="trangThai" name="trangThai" class="form-select">
+                                                <% if (user.trangThai) { %>
+                                                    <option value="True">Hoạt Động</option>
+                                                    <option value="False">Chặn</option>
+                                                <% } else { %>
+                                                    <option value="False">Đã Chặn</option>
+                                                    <option value="True">Bỏ Chặn</option>
+                                                <% } %>
+                                            </select>
+                                        </div>
+                                         
+                                    </div>
+                                    <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                    </div>
+                                </div>
+                                </div>
+                            </div>
+                      </td>
+                      <% }) %>
+                  </tr>
+                </table>
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination justify-content-end">
+                      <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Previous">
+                          <span aria-hidden="true">&laquo;</span>
+                        </a>
+                      </li>
+                      <li class="page-item"><a class="page-link" href="/">1</a></li>
+                      <li class="page-item"><a class="page-link" href="/">2</a></li>
+                      <li class="page-item"><a class="page-link" href="/">3</a></li>
+                      <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Next">
+                          <span aria-hidden="true">&raquo;</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </nav>
+            </div>
+            <%- include('../inc/footer') %>
+          </div>
     </div>
-  </div>
-<%- include('../inc/footer') %>
+
+
+
 
 <script>
    document.getElementById("clear").addEventListener("click", function(){
