fixx session  , ui , and message

--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -140,7 +140,7 @@ button{
         <div class="shape"></div>
     </div>
     <form method="post" >
-        <h3>Login Here</h3>
+        <h3>Web Admin SkyLap</h3>
         <% if(msg!=null) { %>
             <h4 class="text-center"  style="color: red; text-align: center;"><%= msg %></h4>
             <% } %>
