--- a/views/inc/header.ejs
+++ b/views/inc/header.ejs
@@ -1,20 +1,33 @@
 <nav class="navbar navbar-expand px-3 border-bottom">
-    <button class="btn" id="sidebar-toggle" type="button">
+    <button title="" class="btn" id="sidebar-toggle" type="button">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="navbar-collapse navbar">
+     <% if (user) {%>
         <ul class="navbar-nav">
-            <li class="nav-item dropdown-menu">
+            <li class="nav-item dropdown">
                 <a href="#" data-bs-toggle="dropdown" class="nav-icon pe-md-0">
-                    <img src="/images/profile.jpg" class="avatar img-fluid rounded" alt="">
+                         <img src="<%= user.avatar %>" class="avatar img-fluid rounded" alt="">
                 </a>
                 <div class="dropdown-menu dropdown-menu-end">
                     <a href="#" class="dropdown-item">Profile</a>
-                    <a href="#" class="dropdown-item">Setting</a>
-                    <a href="#" class="dropdown-item">Logout</a>
+                    <a href="/logout" class="dropdown-item">Logout</a>
                 </div>
             </li>
         </ul>
+    
+     <%  }else{  %>
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a href="#" data-bs-toggle="dropdown" class="nav-icon pe-md-0">
+                         <img src="/images/profile.jpg" class="avatar img-fluid rounded" alt="">
+                </a>
+                <div class="dropdown-menu dropdown-menu-end">
+                    <a href="#" class="dropdown-item">Login</a>
+                </div>
+            </li>
+        </ul>
+      <% } %>
     </div>
 </nav>
 <script>
@@ -22,4 +35,5 @@
     sidebarToggle.addEventListener("click", function () {
         document.querySelector("#sidebar").classList.toggle("collapsed");
     });
+    
 </script>
